// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-button Should render a button, case full-width false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case full-width true 1`] = `
<mg-button aria-label="label" full-width="" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--full-width mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case full-width undefined 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type button 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="button">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type reset 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="reset">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type submit 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="submit">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an  button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an  button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--danger mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--danger mg-c-button--icon mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--danger-alt mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--danger-alt mg-c-button--icon mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--flat mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--flat mg-c-button--icon mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--info mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--info mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an link button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--link mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an link button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--link mg-c-button--medium">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--secondary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--medium mg-c-button--secondary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--success">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--medium mg-c-button--success">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render tabindex attribute 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render tabindex attribute 2`] = `
<mg-button aria-label="label" role="button" tabindex="-1">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render tabindex attribute 3`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should render tabindex attribute 4`] = `
<mg-button aria-label="label" role="button" tabindex="1">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should update button on size to large with icon: false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should update button on size to large with icon: false 2`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--large mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button Should update button on size to large with icon: true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  <mg-icon icon="user"></mg-icon>
</mg-button>
`;

exports[`mg-button Should update button on size to large with icon: true 2`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--large mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  <mg-icon icon="user" size="large"></mg-icon>
</mg-button>
`;

exports[`mg-button Should update button on size to large with svg: %s 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  <svg></svg>
</mg-button>
`;

exports[`mg-button Should update button on size to large with svg: %s 2`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--icon mg-c-button--large mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  <svg></svg>
</mg-button>
`;

exports[`mg-button Should update mg-icon size when button size is on default value 1`] = `
<mg-button aria-label="default size button" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  <mg-icon icon="user"></mg-icon>
</mg-button>
`;

exports[`mg-button prevent double click Should NOT disable button after click 1`] = `
<mg-button role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should NOT disable button after click 2`] = `
<mg-button role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should NOT disable button after click 3`] = `
<mg-button aria-disabled="true" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should disable button after click 1`] = `
<mg-button role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should disable button after click 2`] = `
<mg-button aria-disabled="true" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--disabled mg-c-button--loading mg-c-button--medium mg-c-button--primary">
      <mg-icon icon="loader" spin=""></mg-icon>
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should disable button after click 3`] = `
<mg-button aria-disabled="false" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should not have fn when disabled 1`] = `
<mg-button aria-disabled="true" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should not trigger disableOnClick when disabled 1`] = `
<mg-button aria-disabled="true" disableonclick="" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click Should not trigger disableOnClick when disabled 2`] = `
<mg-button aria-disabled="true" disableonclick="" role="button" tabindex="0">
  <template shadowrootmode="open">
    <div class="mg-c-button mg-c-button--disabled mg-c-button--medium mg-c-button--primary">
      <div class="mg-c-button__content">
        <slot></slot>
      </div>
    </div>
  </template>
  Text button
</mg-button>
`;
